# d20distribution

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: linting.yml  main.yml
benchmarks/: test_basic.py  test_explode.py  test_fireball.py  test_modifiers.py
d20distribution/: __main__.py  calculate.py  distribution.py  errors.py  limits.py  parser.py
test/: __init__.py  test_basic.py  test_builder.py  test_dice.py  test_limits.py  test_modifiers.py
typings/d20distribution/: __init__.pyi  calculate.pyi  distribution.pyi  errors.pyi  parser.pyi
